# Thread-Game

./: .clangd  CMakeLists.txt  README.md  cobra.h  exec  include.h  main.cpp  makefile  objeto.cpp
src/: cobra.cpp  cobra.h  comida.cpp  comida.h  main.cpp  semaforo.h
